--- a/index.html
+++ b/index.html
@@ -14,7 +14,62 @@
 </head>
 
 <body>
-    
+    <header>
+        <!-- navigation bar -->
+        <nav class="nav-bar">
+            <div class="logo">
+                <h1>G3 Architects</h1>
+            </div>
+            <div class="menu-items">
+                <ul>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">About</a></li>
+                    <li><a href="">Contact Us</a></li>
+                    <li><a href="">Login</a></li>
+                </ul>
+            </div>
+        </nav>
+        <!-- banner part -->
+        <div class="banner">
+            <div class="banner-items">
+                <div class="banner-info">
+                    <h1 class="banner-heading">Brand New <br> Group of Architects </h1>
+                    <p class="banner-description">provided a general overview of the web design environment. Now that
+                        we’ve covered the big concepts <br> it’s time to roll up our sleeves and start creating a real
+                        web page</p>
+                    <button class="banner-btn">Explore More</button>
+                </div>
+                <div class="banner-img">
+                    <img src="images/banner.png" width="70%" alt="">
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <main>
+        <section class="quick-list">
+            <div class="quick-list-pictures">
+                <div class="quick-list-picture">
+                    <img src="images/team1.png" alt="" class="quick-list-img">
+                </div>
+                <div class="quick-list-picture">
+                    <img src="images/team2.png" alt="" class="quick-list-img">
+                </div>
+                <div class="quick-list-picture">
+                    <img src="images/team3.png" alt="" class="quick-list-img">
+                </div>
+                <div class="quick-list-picture">
+                    <img src="images/team4.png" alt="" class="quick-list-img">
+                </div>
+            </div>
+            <div class="quick-list-info">
+                <h3 class="quick-list-heading">Quick list <span class="span-st1">of Our</span> <br> <span class="span-st2">Features</span></h3>
+                <p class="quick-list-description">Our features are to create the website as you like. We will also do
+                    hosting, SEO and 1 year free service.You will also get many more interesting things for free</p>
+                <button class="quick-list-btn">Explore More</button>
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
