--- a/index.html
+++ b/index.html
@@ -45,8 +45,11 @@
             </div>
         </div>
     </header>
-
+    <!-- main section start -->
     <main>
+        <!---------------------
+             Quick list  
+        ----------------------->
         <section class="quick-list">
             <div class="quick-list-pictures">
                 <div class="quick-list-picture">
@@ -69,7 +72,9 @@
                 <button class="quick-list-btn">Explore More</button>
             </div>
         </section>
-
+        <!---------------------- 
+            feature section start
+        ----------------------->
         <section class="features-container">
             <div class="features">
                 <div class="text-container">
@@ -106,11 +111,12 @@
                         </div>
                     </div>
                     <img src="images/architect.png" alt="">
-                    
                 </div>
             </div>
-            
         </section>
+        <!---------------------- 
+            feature section end
+        ----------------------->
     </main>
 </body>
 
