navbar margin and banner image size changes

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <button class="banner-btn">Explore More</button>
                 </div>
                 <div class="banner-img">
-                    <img src="images/banner.png" width="70%" alt="">
+                    <img src="images/banner.png" width="80%" alt="">
                 </div>
             </div>
         </div>
@@ -117,6 +117,10 @@
         <!---------------------- 
             feature section end
         ----------------------->
+        <div class="facts">
+            <h3 class="fact-heading">Some Facts</h3>
+            <p class="fact-description">You will also get many more interesting things for free like SEO,Hosting etc</p>
+        </div>
     </main>
 </body>
 
