--- a/index.html
+++ b/index.html
@@ -119,8 +119,44 @@
         ----------------------->
         <div class="facts">
             <h3 class="fact-heading">Some Facts</h3>
-            <p class="fact-description">You will also get many more interesting things for free like SEO,Hosting etc</p>
+            <p class="fact-description">You will also get many more interesting things for free like You get 1 year <br> free service  Lorem ipsum dolor sit SEO,Hosting etc.</p>
         </div>
+
+        <!-- Achievement section  -->
+        <section class="achievements">
+            <div class="achievement-container">
+                <div class="achievement">
+                    <img src="images/icons/ribon.png" alt="">
+                    <h3 class="achievement-title">54</h3>
+                    <p class="achievement-info">Awards Winnings</p>
+                </div>
+                <div class="achievement">
+                    <img src="images/icons/projects.png" alt="">
+                    <h3 class="achievement-title">1458</h3>
+                    <p class="achievement-info">Project Finished</p>
+                </div>
+                <div class="achievement">
+                    <img src="images/icons/customers.png" alt="">
+                    <h3 class="achievement-title">590</h3>
+                    <p class="achievement-info">Clients Worked</p>
+                </div>
+                <div class="achievement">
+                    <img src="images/icons/email.png" alt="">
+                    <h3 class="achievement-title">22578</h3>
+                    <p class="achievement-info">Email Send</p>
+                </div>
+            </div>
+        </section>
+
+        <!--------------------------
+             Sponsor section  
+        ---------------------------->
+        <section class="sponsors">
+            <div class="sponsor-info">
+                <h2 class="sponsor-heading">Our Sponsors</h2>
+                <p class="sponsor-description">The companies that have sponsored us are Google Amazon and many others who cannot be named. Below are the names of some of our sponsors</p>
+            </div>
+        </section>
     </main>
 </body>
 
