sponsor section design and media query

--- a/index.html
+++ b/index.html
@@ -152,9 +152,18 @@
              Sponsor section  
         ---------------------------->
         <section class="sponsors">
-            <div class="sponsor-info">
-                <h2 class="sponsor-heading">Our Sponsors</h2>
-                <p class="sponsor-description">The companies that have sponsored us are Google Amazon and many others who cannot be named. Below are the names of some of our sponsors</p>
+            <div class="sponsor-container">
+                <div class="sponsor-info">
+                    <h2 class="sponsor-heading">Our Sponsors</h2>
+                    <p class="sponsor-description">The companies that have sponsored us are Google Amazon and many others who cannot be named. <br> Below are the names of some of our sponsors</p>
+                </div>
+                <div class="sponsor-img-container">
+                    <div class="sponsor-img"><img src="images/sponsors/spotify.png" alt=""></div>
+                    <div class="sponsor-img"><img src="images/sponsors/amazon.png" alt=""></div>
+                    <div class="sponsor-img"><img src="images/sponsors/telerama.png" alt=""></div>
+                    <div class="sponsor-img"><img src="images/sponsors/google.png" alt=""></div>
+                    <div class="sponsor-img"><img src="images/sponsors/figma.png" alt=""></div>
+                </div>
             </div>
         </section>
     </main>
