contact us form

--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
                 </div>
             </div>
             <div class="quick-list-info">
-                <h3 class="quick-list-heading">Quick list <span class="span-st1">of Our</span> <br> <span class="span-st2">Features</span></h3>
+                <h3 class="quick-list-heading">Quick list <span class="span-st1">of Our</span> <br> <span
+                        class="span-st2">Features</span></h3>
                 <p class="quick-list-description">Our features are to create the website as you like. We will also do
                     hosting, SEO and 1 year free service.You will also get many more interesting things for free</p>
                 <button class="quick-list-btn">Explore More</button>
@@ -78,28 +79,37 @@
         <section class="features-container">
             <div class="features">
                 <div class="text-container">
-                    
+
                     <div class="vertical-line">
                         <h1 class="line"></h1>
                         <h1 class="feature-heading">Features you will <br> love & enjoy </h1>
                     </div>
-                    <p class="feature-description">Our features are to create the website as you like. We will also do hosting, SEO and 1 year free service.You will also get many more interesting things for free</p>
+                    <p class="feature-description">Our features are to create the website as you like. We will also do
+                        hosting, SEO and 1 year free service.You will also get many more interesting things for free</p>
                     <div class="box-container">
                         <div class="box">
                             <h3 class="box-heading">Desktop & Mobile Version</h3>
-                            <p class="box-description">Our features are to create the website as you like. We will also do hosting, SEO and 1 year free service.You will also get many more interesting things for free</p>
+                            <p class="box-description">Our features are to create the website as you like. We will also
+                                do hosting, SEO and 1 year free service.You will also get many more interesting things
+                                for free</p>
                         </div>
                         <div class="box">
                             <h3 class="box-heading">Desktop & Mobile Version</h3>
-                            <p class="box-description">Our features are to create the website as you like. We will also do hosting, SEO and 1 year free service.You will also get many more interesting things for free</p>
+                            <p class="box-description">Our features are to create the website as you like. We will also
+                                do hosting, SEO and 1 year free service.You will also get many more interesting things
+                                for free</p>
                         </div>
                         <div class="box">
                             <h3 class="box-heading">Desktop & Mobile Version</h3>
-                            <p class="box-description">Our features are to create the website as you like. We will also do hosting, SEO and 1 year free service.You will also get many more interesting things for free</p>
+                            <p class="box-description">Our features are to create the website as you like. We will also
+                                do hosting, SEO and 1 year free service.You will also get many more interesting things
+                                for free</p>
                         </div>
                         <div class="box">
                             <h3 class="box-heading">Desktop & Mobile Version</h3>
-                            <p class="box-description">Our features are to create the website as you like. We will also do hosting, SEO and 1 year free service.You will also get many more interesting things for free</p>
+                            <p class="box-description">Our features are to create the website as you like. We will also
+                                do hosting, SEO and 1 year free service.You will also get many more interesting things
+                                for free</p>
                         </div>
                     </div>
                 </div>
@@ -119,7 +129,8 @@
         ----------------------->
         <div class="facts">
             <h3 class="fact-heading">Some Facts</h3>
-            <p class="fact-description">You will also get many more interesting things for free like You get 1 year <br> free service  Lorem ipsum dolor sit SEO,Hosting etc.</p>
+            <p class="fact-description">You will also get many more interesting things for free like You get 1 year <br>
+                free service Lorem ipsum dolor sit SEO,Hosting etc.</p>
         </div>
 
         <!-- Achievement section  -->
@@ -155,7 +166,8 @@
             <div class="sponsor-container">
                 <div class="sponsor-info">
                     <h2 class="sponsor-heading">Our Sponsors</h2>
-                    <p class="sponsor-description">The companies that have sponsored us are Google Amazon and many others who cannot be named. <br> Below are the names of some of our sponsors</p>
+                    <p class="sponsor-description">The companies that have sponsored us are Google Amazon and many
+                        others who cannot be named. <br> Below are the names of some of our sponsors</p>
                 </div>
                 <div class="sponsor-img-container">
                     <div class="sponsor-img"><img src="images/sponsors/spotify.png" alt=""></div>
@@ -163,6 +175,27 @@
                     <div class="sponsor-img"><img src="images/sponsors/telerama.png" alt=""></div>
                     <div class="sponsor-img"><img src="images/sponsors/google.png" alt=""></div>
                     <div class="sponsor-img"><img src="images/sponsors/figma.png" alt=""></div>
+                </div>
+            </div>
+        </section>
+
+        <!---------------------------
+             contact us section 
+        ----------------------------->
+        <section class="contact-us">
+            <div class="contact-us-container">
+                <div class="contact-us-text">
+                    <h1 class="text">CONTACT US</h1>
+                    <div class="contact-us-link">
+                        <a href="" class="links"><img src="images/icons/fb.png" alt=""></a>
+                        <a href="" class="links"><img src="images/icons/twitter.png" alt=""></a>
+                    </div>
+                </div>
+                <div class="contact-us-form">
+                    <input type="text" placeholder="Enter Your Name" class="link-style">
+                    <input type="email" name="" id="" placeholder="Enter Your Email" class="link-style">
+                    <textarea name="" id="" cols="30" rows="10" placeholder="Write You Message" class="link-style"></textarea>
+                    <input type="button" value="Submit" class="link-style-submit" >
                 </div>
             </div>
         </section>
