last commit all done pretiy good

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
                 </ul>
             </div>
         </nav>
-        <!-- banner part -->
+        <!--------------------------
+             banner part
+        ---------------------------->
         <div class="banner">
             <div class="banner-items">
                 <div class="banner-info">
@@ -45,7 +47,9 @@
             </div>
         </div>
     </header>
-    <!-- main section start -->
+    <!--########################
+         main section start
+    ############################ -->
     <main>
         <!---------------------
              Quick list  
@@ -94,19 +98,20 @@
                                 for free</p>
                         </div>
                         <div class="box">
-                            <h3 class="box-heading">Desktop & Mobile Version</h3>
+                            <h3 class="box-heading">Drag & Drop Builder</h3>
                             <p class="box-description">Our features are to create the website as you like. We will also
                                 do hosting, SEO and 1 year free service.You will also get many more interesting things
                                 for free</p>
                         </div>
                         <div class="box">
-                            <h3 class="box-heading">Desktop & Mobile Version</h3>
+                            <h3 class="box-heading">Awesome Modern Design</h3>
                             <p class="box-description">Our features are to create the website as you like. We will also
                                 do hosting, SEO and 1 year free service.You will also get many more interesting things
                                 for free</p>
                         </div>
                         <div class="box">
-                            <h3 class="box-heading">Desktop & Mobile Version</h3>
+                            <h3 class="box-heading">Super Easy to Edit
+                            </h3>
                             <p class="box-description">Our features are to create the website as you like. We will also
                                 do hosting, SEO and 1 year free service.You will also get many more interesting things
                                 for free</p>
@@ -200,6 +205,9 @@
             </div>
         </section>
     </main>
+    <footer>
+        <p class="footer-para">All rights reserved copyright@2023 startup landing page design</p>
+    </footer>
 </body>
 
 </html>
