small chane in input field

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                     <input type="text" placeholder="Enter Your Name" class="link-style">
                     <input type="email" name="" id="" placeholder="Enter Your Email" class="link-style">
                     <textarea name="" id="" cols="30" rows="10" placeholder="Write You Message" class="link-style"></textarea>
-                    <input type="button" value="Submit" class="link-style-submit" >
+                    <input type="submit" value="Submit" class="link-style-submit" >
                 </div>
             </div>
         </section>
